# maturita_database_saver

./: .gitignore  Cargo.toml
src/: main.rs
src/model/: mod.rs  series.rs  tv_channels.rs
