[package]
name = "database_saver"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
sea-orm = { version = "0.11.0",  features = ["sqlx-postgres", "runtime-tokio-native-tls", "chrono"] }
sea-orm-migration = "0.11.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }

